--- a/index.html
+++ b/index.html
@@ -654,31 +654,31 @@
           </div>
           <div class="clients">
             <div class="owl-carousel owl-theme clients-owl">
-              <div class="clients-logo">
+              <div class="clients-logo item">
                 <img src="./assets/clients/finnexia.png" alt="" />
               </div>
-              <div class="clients-logo">
+              <div class="clients-logo item">
                 <img src="./assets/clients/gbsplus.svg" alt="" />
               </div>
-              <div class="clients-logo">
+              <div class="clients-logo item">
                 <img src="./assets/clients/amrita logo.svg" alt="" />
               </div>
-              <div class="clients-logo">
+              <div class="clients-logo item">
                 <img src="./assets/clients/mge-logo.png" alt="" />
               </div>
-              <div class="clients-logo">
+              <div class="clients-logo item">
                 <img src="./assets/clients/maptell-logo.png" alt="" />
               </div>
-              <div class="clients-logo">
+              <div class="clients-logo item">
                 <img src="./assets/clients/stjoseph.png" alt="" />
               </div>
-              <div class="clients-logo">
+              <div class="clients-logo item">
                 <img src="./assets/clients/catholicate.png" alt="" />
               </div>
-              <div class="clients-logo">
+              <div class="clients-logo item">
                 <img src="./assets/clients/canara.png" alt="" />
               </div>
-              <div class="clients-logo">
+              <div class="clients-logo item">
                 <img src="./assets/clients/orian.png" alt="" />
               </div>
             </div>
