added some more changes

--- a/index.html
+++ b/index.html
@@ -72,6 +72,24 @@
                     <a href="#" class="main-a">Services</a>
                     <ul class="services-list">
                       <li>
+                        <a href="./pages/websitedev.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">Website Development</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="./pages/digitalmarket.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">Digital Marketing</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="./pages/erppage.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">ERP Solutions</span></a
+                        >
+                      </li>
+                      <li>
                         <a href="./pages/softwaredev.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span"
@@ -85,6 +103,7 @@
                           ><span class="text-span">Advanced Tech</span></a
                         >
                       </li>
+
                       <li>
                         <a href="./pages/maintenance.html"
                           ><span class="icon-span">⤥</span
@@ -109,11 +128,7 @@
                   <li>
                     <a href="./pages/careers.html" id="Careers-link">Careers</a>
                   </li>
-                  <li>
-                    <a href="./pages/projects.html" id="Careers-link"
-                      >Projects</a
-                    >
-                  </li>
+
                   <li>
                     <a id="About-us" class="active-link" href="#">About Us</a>
                   </li>
@@ -179,7 +194,7 @@
               <div class="home-col image-container">
                 <img
                   id="moving-home-image"
-                  src="./assets/digital-marketing.svg"
+                  src="./assets/contacts/digitalsvg.svg"
                   alt=""
                 />
               </div>
@@ -222,7 +237,7 @@
               <div class="home-col image-container">
                 <img
                   id="moving-home-image"
-                  src="./assets/business-investment.svg"
+                  src="./assets/contacts/erpsvg.svg"
                   alt=""
                 />
               </div>
@@ -265,7 +280,7 @@
               <div class="home-col image-container">
                 <img
                   id="moving-home-image"
-                  src="./assets/webDev.svg"
+                  src="./assets/contacts/webdevsvg.svg"
                   alt=""
                 />
               </div>
@@ -355,18 +370,18 @@
                   ></a>
                 </div>
               </div>
-              <div class="cards item" id="Software-service2">
+              <div class="cards item" id="webdev-service1">
                 <div class="card-upper">
                   <div class="flat-icon">
-                    <i class="fa-solid fa-laptop-code"></i>
+                    <i class="fa-brands fa-chrome"></i>
                   </div>
                   <h4 class="card-heading">
-                    <a href="./pages/softwaredev.html">Software Development</a>
+                    <a href="./pages/websitedev.html">Website Development</a>
                   </h4>
                   <p class="text-card">
-                    Industry specific custom Software development solution for
-                    business enchancement and good will maintainance for
-                    customer satisfaction.
+                    Having a right advices from experts and services makes your
+                    firm topper, we provide many marketing services which needed
+                    to your bussiness growth.
                   </p>
                 </div>
                 <div class="card-lower">
@@ -375,17 +390,18 @@
                   ></a>
                 </div>
               </div>
-              <div class="cards item" id="Advanced-service2">
+              <div class="cards item" id="digital-service1">
                 <div class="card-upper">
                   <div class="flat-icon">
-                    <i class="fa-solid fa-robot"></i>
+                    <i class="fa-solid fa-comments-dollar"></i>
                   </div>
                   <h4 class="card-heading">
-                    <a href="./pages/AdvancedTech.html">Advanced Tech</a>
+                    <a href="./pages/advisory.html">Digital Marketing</a>
                   </h4>
                   <p class="text-card">
-                    Our advanced technology features Artificial Intelligence and
-                    other main technology solutions for industry 4.0.
+                    Having a right advices from experts and services makes your
+                    firm topper, we provide many marketing services which needed
+                    to your bussiness growth.
                   </p>
                 </div>
                 <div class="card-lower">
@@ -394,32 +410,13 @@
                   ></a>
                 </div>
               </div>
-              <div class="cards item" id="Maintainance-service2">
+              <div class="cards item" id="erp-service1">
                 <div class="card-upper">
                   <div class="flat-icon">
-                    <i class="fa-regular fa-circle-question"></i>
+                    <i class="fa-solid fa-fingerprint"></i>
                   </div>
                   <h4 class="card-heading">
-                    <a href="./pages/maintenance.html">Maintenance & Support</a>
-                  </h4>
-                  <p class="text-card">
-                    Our Maintenance & Support offer top quality well organised
-                    adaptive support.
-                  </p>
-                </div>
-                <div class="card-lower">
-                  <a href="#"
-                    >Learn More <i class="fa-solid fa-arrow-right-long"></i
-                  ></a>
-                </div>
-              </div>
-              <div class="cards item" id="Advisory-service2">
-                <div class="card-upper">
-                  <div class="flat-icon">
-                    <i class="fa-solid fa-screwdriver-wrench"></i>
-                  </div>
-                  <h4 class="card-heading">
-                    <a href="./pages/advisory.html">Advisory</a>
+                    <a href="./pages/advisory.html">ERP Solutions</a>
                   </h4>
                   <p class="text-card">
                     Having a right advices from experts and services makes your
@@ -681,6 +678,12 @@
               <div class="clients-logo item">
                 <img src="./assets/clients/orian.png" alt="" />
               </div>
+              <div class="clients-logo item">
+                <img src="./assets/clients/tgrade.png" alt="" />
+              </div>
+              <div class="clients-logo item">
+                <img src="./assets/clients/woodstone.png" alt="" />
+              </div>
             </div>
           </div>
         </div>
@@ -699,12 +702,12 @@
           <div class="contact-row">
             <div class="contact-col">
               <div class="upper-contact">
-                <img src="./assets/contacts/1.jpg" alt="" />
+                <img src="./assets/contacts/webdevsvg.svg" alt="" />
               </div>
               <div class="lower-contact">
                 <h5><a href="#">Website Development</a></h5>
                 <p class="contact-detail">
-                  <i class="fa-solid fa-phone"></i><span>+9074376257</span>
+                  <i class="fa-solid fa-phone"></i><span>+91 892-122-9471</span>
                 </p>
                 <p class="contact-detail">
                   <i class="fa-solid fa-envelope"></i
@@ -719,12 +722,12 @@
             </div>
             <div class="contact-col">
               <div class="upper-contact">
-                <img src="./assets/contacts/1.jpg" alt="" />
+                <img src="./assets/contacts/digitalsvg.svg" alt="" />
               </div>
               <div class="lower-contact">
                 <h5><a href="#">Digital Marketing</a></h5>
                 <p class="contact-detail">
-                  <i class="fa-solid fa-phone"></i><span>+9074376257</span>
+                  <i class="fa-solid fa-phone"></i><span>+91 892-122-9471</span>
                 </p>
                 <p class="contact-detail">
                   <i class="fa-solid fa-envelope"></i
@@ -739,12 +742,12 @@
             </div>
             <div class="contact-col">
               <div class="upper-contact">
-                <img src="./assets/contacts/1.jpg" alt="" />
+                <img src="./assets/contacts/erpsvg.svg" alt="" />
               </div>
               <div class="lower-contact">
                 <h5><a href="#">ERP Solutions</a></h5>
                 <p class="contact-detail">
-                  <i class="fa-solid fa-phone"></i><span>+9074376257</span>
+                  <i class="fa-solid fa-phone"></i><span>+91 892-122-9471</span>
                 </p>
                 <p class="contact-detail">
                   <i class="fa-solid fa-envelope"></i
@@ -978,6 +981,15 @@
                 <h4 class="footer-title">Service Links</h4>
                 <ul class="main-footer-list">
                   <li>
+                    <a href="./pages/websitedev.html">Website Development</a>
+                  </li>
+                  <li>
+                    <a href="./pages/digitalmarket.html">Digital Marketing</a>
+                  </li>
+                  <li>
+                    <a href="./pages/erppage.html">ERP Solutions</a>
+                  </li>
+                  <li>
                     <a href="./pages/softwaredev.html">Software Development</a>
                   </li>
                   <li><a href="./pages/advisory.html">Advanced Tech</a></li>
@@ -1057,9 +1069,26 @@
         <!-- <li><img src="./assets/header-logo.png" alt="Text" /></li> -->
         <li><a id="home-sidebar" data-page="home" href="#">Home</a></li>
         <li class="service-li">
-          <a id="toggle-service" data-page="Services" href="#">Services <i class="fa-solid fa-arrow-right serv-arrow"></i></a>
+          <a id="toggle-service" data-page="Services" href="#"
+            >Services <i class="fa-solid fa-arrow-right serv-arrow"></i
+          ></a>
 
           <ul id="menu" class="toogle-ul">
+            <li>
+              <a href="./pages/websitedev.html" data-page="Service1"
+                >Website Development</a
+              >
+            </li>
+            <li>
+              <a href="./pages/digitalmarket.html" data-page="Service1"
+                >Digital Marketing</a
+              >
+            </li>
+            <li>
+              <a href="./pages/erppage.html" data-page="Service1"
+                >ERP Solutions</a
+              >
+            </li>
             <li>
               <a href="./pages/softwaredev.html" data-page="Service1"
                 >Software Development</a
@@ -1082,9 +1111,7 @@
         </li>
         <li><a id="tech-sidebar" href="#" data-page="Tech">Technologies</a></li>
         <li><a href="./pages/careers.html" data-page="Careers">Careers</a></li>
-        <li>
-          <a href="./pages/projects.html" data-page="Projects">Projects</a>
-        </li>
+        
         <li>
           <a id="About-us-sidebar" data-page="AboutUs" href="#">About Us</a>
         </li>
@@ -1101,36 +1128,38 @@
     <script src="./js/Sidebarcollapse.js"></script>
     <script>
       const SoftwareCard1 = document.getElementById("Software-service1");
-      const SoftwareCard2 = document.getElementById("Software-service2");
       const AdvancedCard1 = document.getElementById("Advanced-service1");
-      const AdvancedCard2 = document.getElementById("Advanced-service2");
       const MaintenanceCard1 = document.getElementById("Maintainance-service1");
-      const MaintenanceCard2 = document.getElementById("Maintainance-service2");
       const AdvisoryCard1 = document.getElementById("Advisory-service1");
-      const AdvisoryCard2 = document.getElementById("Advisory-service2");
+      const WebdevCard1 = document.getElementById("webdev-service1");
+      const DigitalCard1 = document.getElementById("digital-service1");
+      const ERPCard1 = document.getElementById("erp-service1");
+
+      WebdevCard1.addEventListener("click", () => {
+        window.location.href = "./pages/websitedev.html";
+      });
+
+      DigitalCard1.addEventListener("click", () => {
+        window.location.href = "./pages/digitalmarket.html";
+      });
+
+      ERPCard1.addEventListener("click", () => {
+        window.location.href = "./pages/erppage.html";
+      });
 
       SoftwareCard1.addEventListener("click", () => {
         window.location.href = "./pages/softwaredev.html";
       });
-      SoftwareCard2.addEventListener("click", () => {
-        window.location.href = "./pages/softwaredev.html";
-      });
+
       AdvancedCard1.addEventListener("click", () => {
         window.location.href = "./pages/AdvancedTech.html";
       });
-      AdvancedCard2.addEventListener("click", () => {
-        window.location.href = "./pages/AdvancedTech.html";
-      });
+
       MaintenanceCard1.addEventListener("click", () => {
         window.location.href = "./pages/maintenance.html";
       });
-      MaintenanceCard2.addEventListener("click", () => {
-        window.location.href = "./pages/maintenance.html";
-      });
+
       AdvisoryCard1.addEventListener("click", () => {
-        window.location.href = "./pages/advisory.html";
-      });
-      AdvisoryCard2.addEventListener("click", () => {
         window.location.href = "./pages/advisory.html";
       });
     </script>
