--- a/pages/AdvancedTech.html
+++ b/pages/AdvancedTech.html
@@ -71,6 +71,24 @@
                     >
                     <ul class="services-list">
                       <li>
+                        <a href="./pages/websitedev.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">Website Development</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="./pages/digitalmarket.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">Digital Marketing</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="./pages/erppage.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">ERP Solutions</span></a
+                        >
+                      </li>
+                      <li>
                         <a href="./softwaredev.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span"
@@ -325,7 +343,6 @@
                 <ul class="main-footer-list">
                   <li><a href="../index.html">Home</a></li>
                   <li><a href="./careers.html">Career</a></li>
-                  <li><a href="./projects.html">Project</a></li>
                   <li><a href="./aboutus.html">About Us</a></li>
                   <li><a href="./contact.html">Contact Us</a></li>
                 </ul>
@@ -391,6 +408,22 @@
             >Services <i class="fa-solid fa-arrow-right serv-arrow"></i
           ></a>
           <ul id="menu" class="toogle-ul">
+            <li>
+              <a href="./websitedev.html" data-page="Service1"
+                >Website Development</a
+              >
+            </li>
+            <li>
+              <a href="./digitalmarket.html" data-page="Service1"
+                >Digital Marketing</a
+              >
+            </li>
+            <li>
+              <a href="./erppage.html" data-page="Service1"
+                >ERP Solutions</a
+              >
+            </li>
+
             <li><a href="./softwaredev.html">Software Development</a></li>
             <li>
               <a
@@ -404,7 +437,7 @@
           </ul>
         </li>
         <li><a href="./careers.html">Career</a></li>
-        <li><a href="./careers.html">Project</a></li>
+        
         <li><a id="About-us-sidebar" href="./aboutus.html">About</a></li>
         <li><a id="contact-sidebar" href="./contact.html">Contact</a></li>
       </ul>
