--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -68,6 +68,24 @@
                     <a href="#" class="main-a">Services</a>
                     <ul class="services-list">
                       <li>
+                        <a href="./pages/websitedev.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">Website Development</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="./pages/digitalmarket.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">Digital Marketing</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="./pages/erppage.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">ERP Solutions</span></a
+                        >
+                      </li>
+                      <li>
                         <a href="./softwaredev.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span"
@@ -101,7 +119,6 @@
                     <a href="../index.html" class=".main-a">Technologies</a>
                   </li>
                   <li><a href="./careers.html" class=".main-a">Careers</a></li>
-                  <li><a href="./projects.html" class=".main-a">Project</a></li>
                   <li>
                     <a
                       id="About-us"
@@ -236,20 +253,32 @@
         <div class="auto-container">
           <div class="features-one">
             <div class="feature-row">
+              <div id="Web" class="grid-item">
+                <i class="fa-brands fa-chrome"></i>
+                <h6>Website Development</h6>
+              </div>
+              <div id="Digi" class="grid-item">
+                <i class="fa-solid fa-comments-dollar"></i>
+                <h6>Digital Marketing</h6>
+              </div>
+              <div id="Erp" class="grid-item">
+                <i class="fa-solid fa-fingerprint"></i>
+                <h6>ERP Solutions</h6>
+              </div>
               <div id="Soft" class="grid-item">
-                <i class="fa-brands fa-uncharted"></i>
+                <i class="fa-solid fa-laptop-code"></i>
                 <h6>Software Development</h6>
               </div>
               <div id="Adv" class="grid-item">
-                <i class="fa-solid fa-microchip"></i>
+                <i class="fa-solid fa-robot"></i>
                 <h6>Advanced Tech</h6>
               </div>
               <div id="Mai" class="grid-item">
-                <i class="fa-solid fa-headset"></i>
+                <i class="fa-solid fa-circle-question"></i>
                 <h6>Maintenance Support</h6>
               </div>
               <div id="Advi" class="grid-item">
-                <i class="fa-regular fa-comment"></i>
+                <i class="fa-solid fa-screwdriver-wrench"></i>
                 <h6>Advisory</h6>
               </div>
             </div>
@@ -275,17 +304,15 @@
                     <i class="fa-solid fa-quote-left"></i>
                   </div>
                   <div class="profile-pic">
-                    <img src="../assets/clients/author-2.jpg" alt="" />
+                    <img src="../assets/teams/nithya.jpeg" alt="" />
                   </div>
                   <div class="quote-text">
-                    Nam ultricies sed leolet eget vehic. Sed varius non magna
-                    quis mats. Integer finibus nil at tempus semper, rokomoni
-                    our has auctor leo.
+                    Classes were so good and understanding. Very very supportive & helping faculties, they are out there to clear all our doubts.I would like to suggest scipy technologies to all my friends and colleagues...I just loved the friendly atmosphere out there... I am so thankful to the Scipy team.
                   </div>
                 </div>
                 <div class="lower-part">
-                  <h6>Ruksana Rahman Maya</h6>
-                  <div class="quote-div">Brand Designer</div>
+                  <h6>Nithya Rajendran</h6>
+                  <div class="quote-div">Software Developer | saasvaap</div> 
                 </div>
               </div>
             </div>
@@ -296,17 +323,15 @@
                     <i class="fa-solid fa-quote-left"></i>
                   </div>
                   <div class="profile-pic">
-                    <img src="../assets/clients/author-2.jpg" alt="" />
+                    <img src="../assets/teams/chinju.jpg" alt="" />
                   </div>
                   <div class="quote-text">
-                    Nam ultricies sed leolet eget vehic. Sed varius non magna
-                    quis mats. Integer finibus nil at tempus semper, rokomoni
-                    our has auctor leo.
+                    If you are looking for a place to develop your skill and your dream job, here you are.. you reached your right destination. I have an awesome experience in SciPy Technologies during my internship. Amazing atmosphere and supportive staff members.
                   </div>
                 </div>
                 <div class="lower-part">
-                  <h6>Ruksana Rahman Maya</h6>
-                  <div class="quote-div">Brand Designer</div>
+                  <h6>Chinju</h6>
+                  <div class="quote-div">System Engineer | Infosys</div>
                 </div>
               </div>
             </div>
@@ -317,17 +342,15 @@
                     <i class="fa-solid fa-quote-left"></i>
                   </div>
                   <div class="profile-pic">
-                    <img src="../assets/clients/author-2.jpg" alt="" />
+                    <img src="../assets/teams/vargees.jpg" alt="" />
                   </div>
                   <div class="quote-text">
-                    Nam ultricies sed leolet eget vehic. Sed varius non magna
-                    quis mats. Integer finibus nil at tempus semper, rokomoni
-                    our has auctor leo.
+                    SciPY is one of the best development teams I’ve worked with. The quality of work is excellent and their communication skills are top notch. Highly motivating members. I highly recommend this development team and will be working with them again!
                   </div>
                 </div>
                 <div class="lower-part">
-                  <h6>Ruksana Rahman Maya</h6>
-                  <div class="quote-div">Brand Designer</div>
+                  <h6>Varghese</h6>
+                  <div class="quote-div">Software Developer | Capgemini India</div>
                 </div>
               </div>
             </div>
@@ -438,6 +461,9 @@
               <div class="footer-widget-links">
                 <h4 class="footer-title">Service Links</h4>
                 <ul class="main-footer-list">
+                  <li><a href="./websitedev.html">Website Development</a></li>
+                  <li><a href="./digitalmarket.html">Digital Marketing</a></li>
+                  <li><a href="./erppage.html">ERP Solutions</a></li>
                   <li><a href="./softwaredev.html">Software Development</a></li>
                   <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
                   <li>
@@ -453,7 +479,6 @@
                 <ul class="main-footer-list">
                   <li><a href="../index.html">Home</a></li>
                   <li><a href="./careers.html">Careers</a></li>
-                  <li><a href="./projects.html">Projects</a></li>
                   <li><a href="./aboutus.html">About Us</a></li>
                   <li><a href="./contact.html">Contact Us</a></li>
                 </ul>
@@ -512,8 +537,23 @@
           <a id="home-sidebar" href="../index.html">Home</a>
         </li>
         <li>
-          <a id="toggle-service" href="#">Services<i class="fa-solid fa-arrow-right serv-arrow"></i></a>
+          <a id="toggle-service" href="#"
+            >Services<i class="fa-solid fa-arrow-right serv-arrow"></i
+          ></a>
           <ul id="menu" class="toogle-ul">
+            <li>
+              <a href="./websitedev.html" data-page="Service1"
+                >Website Development</a
+              >
+            </li>
+            <li>
+              <a href="./digitalmarket.html" data-page="Service1"
+                >Digital Marketing</a
+              >
+            </li>
+            <li>
+              <a href="./erppage.html" data-page="Service1">ERP Solutions</a>
+            </li>
             <li><a href="./softwaredev.html">Software Development</a></li>
             <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
             <li><a href="./maintenance.html">Maintenance and Support</a></li>
@@ -521,13 +561,38 @@
           </ul>
         </li>
         <li><a href="./careers.html">Careers</a></li>
-        <li><a href="./projects.html">Projects</a></li>
-        <li><a id="About-us-sidebar" href="./aboutus.html" style="color: #fff; background-color: #0092ff;">About Us</a></li>
+
+        <li>
+          <a
+            id="About-us-sidebar"
+            href="./aboutus.html"
+            style="color: #fff; background-color: #0092ff"
+            >About Us</a
+          >
+        </li>
         <li><a id="contact-sidebar" href="./contact.html">Contact Us</a></li>
       </ul>
     </div>
     <script src="../js/Sidebarcollapse.js"></script>
     <script>
+      const featuresWeb = document.getElementById("Web");
+
+      featuresWeb.addEventListener("click", () => {
+        window.location.href = "./websitedev.html";
+      });
+
+      const featuresDig = document.getElementById("Digi");
+
+      featuresDig.addEventListener("click", () => {
+        window.location.href = "./digitalmarket.html";
+      });
+
+      const featuresErp = document.getElementById("Erp");
+
+      featuresErp.addEventListener("click", () => {
+        window.location.href = "./erppage.html";
+      });
+
       const featuresSoft = document.getElementById("Soft");
 
       featuresSoft.addEventListener("click", () => {
