--- a/pages/softwaredev.html
+++ b/pages/softwaredev.html
@@ -71,6 +71,24 @@
                     >
                     <ul class="services-list" style="color: #1d2c38">
                       <li>
+                        <a href="./pages/websitedev.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">Website Development</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="./pages/digitalmarket.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">Digital Marketing</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="./pages/erppage.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">ERP Solutions</span></a
+                        >
+                      </li>
+                      <li>
                         <a href="./softwaredev.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span"
@@ -393,9 +411,24 @@
             id="toggle-service"
             href="#"
             style="color: #fff; background-color: #0092ff"
-            >Services <i class="fa-solid fa-arrow-right serv-arrow"></i></a
-          >
+            >Services <i class="fa-solid fa-arrow-right serv-arrow"></i
+          ></a>
           <ul id="menu" class="toogle-ul">
+            <li>
+              <a href="./websitedev.html" data-page="Service1"
+                >Website Development</a
+              >
+            </li>
+            <li>
+              <a href="./digitalmarket.html" data-page="Service1"
+                >Digital Marketing</a
+              >
+            </li>
+            <li>
+              <a href="./erppage.html" data-page="Service1"
+                >ERP Solutions</a
+              >
+            </li>
             <li>
               <a
                 href="./softwaredev.html"
@@ -409,7 +442,7 @@
           </ul>
         </li>
         <li><a href="./careers.html">Careers</a></li>
-        <li><a href="./projects.html">Projects</a></li>
+        
         <li><a id="About-us-sidebar" href="./aboutus.html">About Us</a></li>
         <li><a id="contact-sidebar" href="./contact.html">Contact Us</a></li>
       </ul>
