--- a/pages/maintenance.html
+++ b/pages/maintenance.html
@@ -71,6 +71,24 @@
                     >
                     <ul class="services-list">
                       <li>
+                        <a href="./pages/websitedev.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">Website Development</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="./pages/digitalmarket.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">Digital Marketing</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="./pages/erppage.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">ERP Solutions</span></a
+                        >
+                      </li>
+                      <li>
                         <a href="./softwaredev.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span"
@@ -384,6 +402,21 @@
         <li>
           <a id="toggle-service" href="#" style="color: #fff; background-color: #0092ff">Services <i class="fa-solid fa-arrow-right serv-arrow"></i></a>
           <ul id="menu" class="toogle-ul">
+            <li>
+              <a href="./websitedev.html" data-page="Service1"
+                >Website Development</a
+              >
+            </li>
+            <li>
+              <a href="./digitalmarket.html" data-page="Service1"
+                >Digital Marketing</a
+              >
+            </li>
+            <li>
+              <a href="./erppage.html" data-page="Service1"
+                >ERP Solutions</a
+              >
+            </li>
             <li><a href="./softwaredev.html">Software Development</a></li>
             <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
             <li><a href="./maintenance.html" style="color: #fff; background-color: #0092ff">Maintenance and Support</a></li>
@@ -391,7 +424,7 @@
           </ul>
         </li>
         <li><a href="./careers.html">Careers</a></li>
-        <li><a href="./projects.html">Projects</a></li>
+        
         <li><a id="About-us-sidebar" href="./aboutus.html">About Us</a></li>
         <li><a id="contact-sidebar" href="./contact.html">Contact Us</a></li>
       </ul>
