--- a/pages/projects.html
+++ b/pages/projects.html
@@ -66,6 +66,24 @@
                     >
                     <ul class="services-list">
                       <li>
+                        <a href="./pages/websitedev.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">Website Development</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="./pages/digitalmarket.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">Digital Marketing</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="./pages/erppage.html"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">ERP Solutions</span></a
+                        >
+                      </li>
+                      <li>
                         <a href="./softwaredev.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span"
@@ -370,6 +388,21 @@
         <li>
           <a id="toggle-service" href="#">Services <i class="fa-solid fa-arrow-right serv-arrow"></i></a>
           <ul id="menu" class="toogle-ul">
+            <li>
+              <a href="./pages/websitedev.html" data-page="Service1"
+                >Website Development</a
+              >
+            </li>
+            <li>
+              <a href="./pages/digitalmarket.html" data-page="Service1"
+                >Digital Marketing</a
+              >
+            </li>
+            <li>
+              <a href="./pages/erppage.html" data-page="Service1"
+                >ERP Solutions</a
+              >
+            </li>
             <li><a href="./softwaredev.html">Software Development</a></li>
             <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
             <li><a href="./maintenance.html">Maintenance and Support</a></li>
