added projects done list

--- a/pages/careers.html
+++ b/pages/careers.html
@@ -126,17 +126,14 @@
                       >Career</a
                     >
                   </li>
-                  <li>
+                  <!-- <li>
                     <a href="./projects.html">Project</a>
-                  </li>
+                  </li> -->
                   <li>
                     <a id="About-us" href="./aboutus.html">About Us</a>
                   </li>
                   <li>
-                    <a
-                      id="Contact-us"
-                      class="active-link"
-                      href="./contact.html"
+                    <a id="Contact-us" class="active-link" href="./contact.html"
                       >Contact Us</a
                     >
                   </li>
@@ -189,13 +186,50 @@
           </div>
         </div>
       </section>
+      <section class="projects-done">
+        <div class="auto-container">
+          <div
+            class="d-flex justify-content-center align-items-center flex-column"
+          >
+            <div class="gallery-title">
+              <!-- <h3 class="sec-title-gallery">
+                <i class="fa-brands fa-studiovinari"></i>OUR PLACED
+              </h3> -->
+              <h2 class="gallery-title-head">Projects Done</h2>
+              <div class="sec-title-seperator">
+                <div class="blue-item"></div>
+              </div>
+            </div>
+            <div class="Projects-div">
+              <ul class="Projects-list">
+                <li><a href="#">Stock Data Analysis</a></li>
+                <li>
+                  <a href="#">Medical Image Analysis & Feature Extraction</a>
+                </li>
+                <li>
+                  <a href="#">Plant Disease Detection (Plant-Care App)</a>
+                </li>
+                <li><a href="#">Catrait Eye Segmentation </a></li>
+                <li><a href="#">Real Time View Counting (Advertising)</a></li>
+                <li>
+                  <a href="#">Skin ACNE Analysis & Real time Identification</a>
+                </li>
+                <li><a href="#">LLM</a></li>
+                <li><a href="#">Auto Scientific name from Image Search</a></li>
+                <li><a href="#">Malayalam Speech Generation App</a></li>
+                <li><a href="#">Image Enchance App</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="team-members" style="margin-top: 100px">
         <div class="auto-container">
           <div class="gallery-title">
             <!-- <h3 class="sec-title-gallery">
               <i class="fa-brands fa-studiovinari"></i>OUR PLACED
             </h3> -->
-            <h2 class="gallery-title-head"> Our Placed Candidates</h2>
+            <h2 class="gallery-title-head">Our Placed Candidates</h2>
             <div class="sec-title-seperator">
               <div class="blue-item"></div>
             </div>
@@ -554,7 +588,9 @@
         <!-- <li><img src="../assets/header-logo.png" alt="" /></li> -->
         <li><a id="home-sidebar" href="../index.html">Home</a></li>
         <li>
-          <a id="toggle-service" href="#">Services <i class="fa-solid fa-arrow-right serv-arrow"></i></a>
+          <a id="toggle-service" href="#"
+            >Services <i class="fa-solid fa-arrow-right serv-arrow"></i
+          ></a>
           <ul id="menu" class="toogle-ul">
             <li>
               <a href="./websitedev.html" data-page="Service1"
@@ -567,9 +603,7 @@
               >
             </li>
             <li>
-              <a href="./erppage.html" data-page="Service1"
-                >ERP Solutions</a
-              >
+              <a href="./erppage.html" data-page="Service1">ERP Solutions</a>
             </li>
             <li><a href="./softwaredev.html">Software Development</a></li>
             <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
@@ -577,8 +611,14 @@
             <li><a href="./advisory.html">Advisory</a></li>
           </ul>
         </li>
-        <li><a href="./careers.html" style="color: #fff; background-color: #0092ff">Careers</a></li>
-    
+        <li>
+          <a
+            href="./careers.html"
+            style="color: #fff; background-color: #0092ff"
+            >Careers</a
+          >
+        </li>
+
         <li><a id="About-us-sidebar" href="./aboutus.html">About Us</a></li>
         <li><a id="contact-sidebar" href="./contact.html">Contact Us</a></li>
       </ul>
