fixed projects title

--- a/pages/careers.html
+++ b/pages/careers.html
@@ -187,19 +187,20 @@
         </div>
       </section>
       <section class="projects-done">
+        <div class="gallery-title project-title">
+          <!-- <h3 class="sec-title-gallery">
+            <i class="fa-brands fa-studiovinari"></i>OUR PLACED
+          </h3> -->
+          <h2 class="gallery-title-head">Projects Done</h2>
+          <div class="sec-title-seperator">
+            <div class="blue-item"></div>
+          </div>
+        </div>
         <div class="auto-container">
           <div
             class="d-flex justify-content-center align-items-center flex-column"
           >
-            <div class="gallery-title">
-              <!-- <h3 class="sec-title-gallery">
-                <i class="fa-brands fa-studiovinari"></i>OUR PLACED
-              </h3> -->
-              <h2 class="gallery-title-head">Projects Done</h2>
-              <div class="sec-title-seperator">
-                <div class="blue-item"></div>
-              </div>
-            </div>
+            
             <div class="Projects-div">
               <ul class="Projects-list">
                 <li><a href="#">Stock Data Analysis</a></li>
